2007-08-29  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	* engines/crux/Makefile.am:
	* engines/crux/src/crux-gradient.c:
	* engines/crux/src/crux-gradient.h:
	* engines/crux/src/eazel-theme.h:
	Removed some unused files from crux.

2007-08-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	So undecided about this :)

2007-08-23  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.11.7 release.

2007-08-21  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_top_left_highlight),
	(clearlooks_gummy_draw_slider),
	(clearlooks_gummy_draw_scrollbar_slider):
	Using #define for few constants

2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_slider):
	Improvements in the slider, mostly in shadings

2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_top_left_highlight),
	(clearlooks_gummy_draw_scrollbar_slider):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	Updated copyright statements, improved hilight from 0.4 alpha to 0.5

2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_slider):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_top_left_highlight),
	(clearlooks_gummy_draw_button),
	(clearlooks_gummy_draw_scrollbar_stepper),
	(clearlooks_gummy_draw_scrollbar_slider):	
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Added top-left-hilight and improved scrollbar look

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Little improvements

2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab):